--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ h1, h2, h3, h4, h5, h6{
     height:auto;
     background: #000000;
     position: relative;
+    min-width: 1640px;
     max-width: 100%;
 
 }
