--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 head{
     display:none;
 
@@ -25,6 +26,7 @@ h1, h2, h3, h4, h5, h6{
     position: relative;
     min-width: 600px;
     max-width: 100%;
+    width: 1920px;
 
 }
 div{
